--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
         <div class="row">
             <div class="row align-items-center justify-content-center" id="centerized-div">
                 <div class="col-md-1">
-
                 </div>
                 <div class="col-md-5">
-                    <h1>Welcome To Game</h1>
+                    <h1 id="title">Welcome To Game</h1>
                 </div>
                 <div class="col-md-3">
                     <div class="wrapper">
