--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tic-Tac-Toe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="public/css-files/main-page-style.css">
+    <link rel="stylesheet" href="public/css-files/button.css">
 </head>
 <body>
     <div class="container-fluid">
@@ -36,8 +37,8 @@
            
                 <div class="col-md-3">
                     <div class="wrapper">
-                        <a class="cta" href="public/html-files/AboutMe.html">
-                          <span>About Author</span>
+                        <a class="cta" href="https://github.com/SerhatKumas/Javascript--TicTacToeGame">
+                          <span>Source Code</span>
                           <span>
                             <svg width="66px" height="43px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                               <g id="arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
