Reset game option is added to user interface

--- a/public/html-files/Tic-Tac-Toe.html
+++ b/public/html-files/Tic-Tac-Toe.html
@@ -15,7 +15,7 @@
             <div class="row text-center">
                 <div class="col-md-2"><a href="../../index.html"><button class="btn" id="btn-back"><h6>Back to main menu</h6></button></a></div>
                 <div class="col-md-8"><h1>Tic Tac Toe</h1></div>
-                <div class="col-md-2"></div>
+                <div class="col-md-2"><button class="btn" id="btn-back" onclick="resetGame();"><h6>Reset Game</h6></button></div>
             </div>
             <div class="row justify-content-center mt-5">
                 <button class="col-md-2 tic-btn" id="1" onclick="gameRunner(this.id)">
